partial editing conclusion

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -125,9 +125,9 @@ In the following analysis, the data for 2013 has been added back in and we have 
 The pattern of change in time to next test is in accordance with our projections. We were expected the result of a decrease between tests for patients with serious renal impairment. The middle zone of mild renal impairment fulfilled our expectation of no change. Only time will tell if the expected increase in time between tests for those patients with mild or no renal impairment occurs. Given the time between tests in this group of patients is expected to be measured in years, it will be some time before if our hypothesis is confirmed. The clinical benefit of RenalQ is already established through the reduction or optimization between tests for those patients with moderate to severe renal impairment. Any financial benefit will only occur with reduction in testing frequency in thos with mild or no renal impairment.
 
 \section{Conclusions}
-The management of laboratory results in general and the management of renal disease are both significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more significant in the future. For the practitioner, renal function tests needs to be interpreted within the patient's context. The same result will mean different things in different patients. With time frames for chronic renal impairment being measured in months or years, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. Yet the consequences for both the patient and the affordability of health care is significant.\\
+The management of laboratory results in general and renal function tests, in particular, are significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more important in the future. For the practitioner, renal function tests need to be interpreted within the patient's context. The same result will mean different things for different patients. With time frames measured in measured in months or years for chronic renal impairment, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. The consequences for both the patient and the affordability of health care is significant.\\
 
-RenalQ is the first generation of "SMART" solutions to these types of clinical problems. By providing individualized, situational assistance to the clinician at the point of decision making, the clinician is given more opportunity to make the right decision for the particular patient. This is independent of whether the clinician agrees with RenalQ or not. The result was flagged as one about which a decision needed to be made.\\ 
+RenalQ is the first generation of "SMART" solutions to these types of clinical problems. By providing individualized, situational assistance to the clinician at the point of decision-making, more opportunity is given to the clinician to individual and optimise care to each patient. This opportunity is independent of whether the clinician is in concordance with RenalQ or not. RenalQ flagged the patient's result as benefiting from clinician review. That is the success of RenalQ,  in changing clinical outcomes by selectively focusing attention on where it is of most benefit to the patient.  Additionally in situations where the clinician interpreting the result might not be familiar with the patient or the clinical situation, RenalQ provides further assistance through suggestions. Preventing false negatives are critical to building clinician confidence, achieved through conservative RenalQ's interpretations. \\ 
 
 As a quality improvement activity RenalQ has been effective. RenalQ would have flagged the original missed test results as being significant. On a district scale it has provided this level of support to every patient of every practitioner. RenalQ has demonstrated that it decreases the time between sequential renal function tests for those patients who are most at risk of progressing to requiring dialysis. \\
 
