--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -127,13 +127,15 @@ The pattern of change in time to next test is in accordance with our projections
 \section{Conclusions}
 The management of laboratory results in general and renal function tests, in particular, are significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more important in the future. For the practitioner, renal function tests need to be interpreted within the patient's context. The same result will mean different things for different patients. With time frames measured in measured in months or years for chronic renal impairment, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. The consequences for both the patient and the affordability of health care is significant.\\
 
-RenalQ is the first generation of "SMART" solutions to these types of clinical problems. By providing individualized, situational assistance to the clinician at the point of decision-making, more opportunity is given to the clinician to individual and optimise care to each patient. This opportunity is independent of whether the clinician is in concordance with RenalQ or not. RenalQ flagged the patient's result as benefiting from clinician review. That is the success of RenalQ,  in changing clinical outcomes by selectively focusing attention on where it is of most benefit to the patient.  Additionally in situations where the clinician interpreting the result might not be familiar with the patient or the clinical situation, RenalQ provides further assistance through suggestions. Preventing false negatives are critical to building clinician confidence, achieved through conservative RenalQ's interpretations. \\ 
+RenalQ was developed to solve these issues, as characterised by the two case examples. Both of these cases were analysised by RenalQ. In both situations RenalQ was able to alert the clinician, earlier than existing human only processes. Considering the impact at the district wide level, RenalQ has statistically significantly reduced the time between tests for patients with moderate to severe renal impairment. RenalQ is therefore able to make an impact at the individual and district level. \\
 
-As a quality improvement activity RenalQ has been effective. RenalQ would have flagged the original missed test results as being significant. On a district scale it has provided this level of support to every patient of every practitioner. RenalQ has demonstrated that it decreases the time between sequential renal function tests for those patients who are most at risk of progressing to requiring dialysis. \\
+It could be argued that clinicians are ignoring the RenalQ analysis. So RenalQ might not be the causal agent for this dramatic change in behaviour coincidental with the release of the application into the "wild". The counter is that RenalQ provides individualized, situational assistance to the clinician at the point of decision-making, so creating an opportunity for patient to receive timely, appropriate care. This opportunity is independent of whether the clinician is in concordance with RenalQ or not. RenalQ flagged the patient's result as benefiting from clinician review. That is the success of RenalQ.  The application changes clinical outcomes by selectively focusing attention on where clinical attention is of most benefit to the patient.  Additionally in some situations, where the clinician interpreting the result might not be familiar with the patient or the clinical situation, RenalQ provides further assistance through suggestions. \\ 
 
 As an innovation methodology the development of RenalQ took only four years from conceptualization to being able to demonstrate statistically significant patient benefit. Typically the time frame for the successful implementation of effective innovation into clinical practice is 17 years \citep{morris2011answer}. Being the author's first project there was a steep learning. Equally having traversed the learning curve once, the next application should have an even shorter time frame than four years from conceptualization to delivering clinical benefits. \\
 
 Part of the success of this project was due to the use of the R statistical language \citep{rstat2013}. This powerful and effective language for data analysis leading to both insight and new products is a New Zealand success story. Developed by Ross Ihaka and Robert Gentleman from the University of Auckland and first released in 1994, R language now features in lists of the top ten languages used in the world. Almost unbelievably, R statistical language was developed and is maintained as an open source project that is free to use across multiple platforms. Given the explosion in the quantity of data collected, the need for smart use of resources but the development needs to occur within a tight fiscal envelope, R statistical language represents a compelling option for future developments. \\
+
+RenalQ is a first generation cognitive computing application, and has demonstrated the potential of this approach. To date, RenalQ has successfully improved the testing of patients most in need due to moderate to severe renal disease. Time will tell if RenalQ decreases testing rates in patients with mild or no renal impairment. This far larger group is where any potential cost savings will occur. If this does occur then RenalQ might be considered as an exemplar of the role of technology intended in the New Zealand Health Strategy (2016).
 
 
 
