--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -22,9 +22,11 @@
 
 This paper describes the development of an autonomous decision support tool for the interpretation of renal function tests. The tool provides clinicians with suggestions about the further management of a patient's test results. These suggestions are designed to be patient and context specific. The motivations behind the development of this application were to improve the quality of care patients that experience and to support the General Practitioner teams to manage the volume of results they receive on a daily basis. \\
 
-An example was the discovery of an instance where a newly abnormal renal function result, in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry as the result's normality. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient represented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\ 
+An example was the discovery of an instance where a newly abnormal renal function result, in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry as the result's normality. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient represented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\
 
-For any patient or condition, this is concerning but not uncommon, especially with regards to renal function test results.  As early management can change clinical outcomes, any missed test results are of concern. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
+Another patient shortly thereafter was found to have severe renal impairment associated with their type 2 diabetes. The renal function tests had been performed as part of the diabetes assessment. Each result was only 10-15\% than the previous. Occasionally one result showed a small rise in eGFR before the downward progression resumed. The patient was cared for by several different clinicians, but the common factor was the focus was on the diabetes and the renal disease was a side issue to the clinical focsus of attention.\\
+
+For any patient, this is concerning but not uncommon, especially with regards to renal function test results.  As early management can change clinical outcomes, any missed test results are of concern. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
 
 Another motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% with 3.1\% of the population has grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be lead by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al. estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
 
