Jonathan's first changes

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+﻿\documentclass[11pt]{article}
 \usepackage{natbib}
 \usepackage{fullpage}
 \usepackage{draftwatermark}
@@ -20,30 +20,30 @@
 
 \section{Introduction}
 
-This paper describes the development of an autonomous decision support tool for the interpretation of renal function tests. The tool provides clinicians with suggestions about the further management of a patient's test results. These suggestions are designed to be patient and context specific. The motivations behind the development of this application were to improve the quality of care patients that experience and to support the General Practitioner teams to manage the volume of results they receive on a daily basis. \\
+This paper describes the development, implementation, and evaluation  of an autonomous decision support tool for the interpretation of renal function tests. The tool provides clinicians with suggestions about the further management of a patient's test results. These suggestions are designed to be patient and context specific. The motivations behind the development of this application were to improve the quality of care patients experience, and to support the General Practitioner teams to manage the volume of results they receive on a daily basis. \\
 
-An example was the discovery of an instance where a newly abnormal renal function result, in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry as the result's normality. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient represented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\
+An example was the discovery of an instance of an abnormal renal function result in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry indicating the result was normal. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient re-presented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\
 
-Another patient shortly thereafter was found to have severe renal impairment associated with their type 2 diabetes. The renal function tests had been performed as part of the diabetes assessment. Each result was only 10-15\% than the previous. Occasionally one result showed a small rise in eGFR before the downward progression resumed. The patient was cared for by several different clinicians, but the common factor was the focus was on the diabetes and the renal disease was a side issue to the clinical focsus of attention.\\
+Another patient shortly thereafter was found to have severe renal impairment associated with their type 2 diabetes. The renal function tests had been performed as part of the diabetes assessment. Each result was only 10-15\% lower than the previous. Occasionally one result showed a small rise in eGFR before the downward progression resumed. The patient was cared for by several different clinicians, but the common factor was the focus was on the diabetes and the renal disease was a side issue to the clinical focus of attention.\\
 
 For any patient, this is concerning but not uncommon, especially with regards to renal function test results.  As early management can change clinical outcomes, any missed test results are of concern. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
 
-Another motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% with 3.1\% of the population has grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be lead by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al. estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
+Another motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% and 3.1\% of the population has grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be led by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al. estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
 
-This paper will outline the development and implementation of the application. "RenalQ" was the final code name given to the product. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the DHB but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
+This paper will outline the development and implementation of the application. "RenalQ" was the final working name given to the product. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the District Health Board (DHB) but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
 
 \section{Method}
-Ensuring patient safety at all times drove all design decisions in the development of RenalQ. Compared to the clinician, RenalQ only ever has access to a subset of the total dataset about a patient. Information that is not accessible to the application may well have a significant impact on the clinician's further management plans. Therefore, the clinician was to remain responsible for the final determination of further care of the patient.   The decision for the clinician to be the final arbitrator also acknowledges the possibility of error with an application like RenalQ during its development phase. \\
+Ensuring patient safety at all times drove all design decisions in the development of RenalQ. Compared to the clinician, RenalQ only ever has access to a subset of the total data for  a patient. Information that is not accessible to the application may well have a significant impact on the clinician's further management plans. Therefore, the clinician was to remain responsible for the final determination of further care of the patient.   The decision for the clinician to be the final arbitrator also acknowledges the possibility of error with an application like RenalQ during its development phase. \\
 
-The decision was also made to adopt modern production methodology which has used statistical process control (SPC) as part of "production business management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. Adoption of SPC enabled RenalQ to function at the necessary scale to operate within a DHB's laboratory services. Also, be able to consider the individual patient's needs. In health SPC has already been used to study the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
+The decision was also made to adopt modern production methodology which has used statistical process control (SPC) as part of "production business management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. Adoption of SPC enabled RenalQ to function at the necessary scale to operate within a DHB's laboratory services, and also to  be able to consider the individual patient's needs. In health SPC has already been used to study the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
 
-Described elsewhere, is the technical description of the application and its development\citep{GodfreyEtAl2014KidneyPaper}. In essence, RenalQ interprets the eGFR result for each patient, within the context of their previous eGFR results. In the laboratory workflows, RenalQ is executed after the usual renal function tests. In any circumstances where it is inappropriate for the eGFR not to be calculated, RenalQ is not executed either. \\
+the technical description of the application and its development is more fully described elsewhere \citep{GodfreyEtAl2014KidneyPaper}. In essence, RenalQ interprets the estimated Glomerular Filtration Rate (eGFR) result for each patient, within the context of their previous eGFR results. In the laboratory workflows, RenalQ is executed after the usual renal function tests. In any circumstances where it is inappropriate for the eGFR not to be calculated, RenalQ is not executed, such as for pregnant women or children. \\
 
-The RenalQ interpretation engine consists of three layers depending on the number of eGFR results available within the laboratory database. If there are less than five results available, no specific advice is given by RenalQ. If there are between 5-19 results available, the context of the latest eGFR result is interpreted by a set of fixed heuristics rules. These rules encode current standard clinical practice. As a safeguard, any result returned by the application to the treating clinician would be clinically conservative and encourage clinician to be proactive in their care of the patient. Prioritized was patient safety but this meant accepting RenalQ might occasionally be unnecessarily alarmist in its interpretations. The third layer in RenalQ interpretation engine was for patients where more than 20 or more test results were available for SPC to provide an analysis. This third layer used cumulative summation as the SPC methodology to determine changes between the current eGFR result and previous results. From this result, RenalQ develops recommendations for the clinician.  
+The RenalQ interpretation engine consists of three layers depending on the number of eGFR results available within the laboratory database. If there are less than five results available, no specific advice is given by RenalQ. If there are five to nineteen  results available, the context of the latest eGFR result is interpreted by a set of fixed heuristic rules which encode current standard clinical practice. As a safeguard, any result returned by the application to the treating clinician would be clinically conservative, thus encouraging the  clinician to be proactive in their care of the patient. Patient safety was prioritized, but this meant accepting RenalQ might occasionally be unnecessarily alarmist in its interpretations. The third layer in the RenalQ interpretation engine was for patients where twenty  or more test results were available for SPC to provide an analysis. This third layer used control chart methodology, notably including a cumulative summation procedure to determine changes between the current eGFR result and previous results. From this result, RenalQ develops recommendations for the clinician.  
 
-During development of RenalQ, the second layer was found to be essential for the ability of RenalQ to reliably detect acute renal failure. This rule was called the "plummet" rule for obvious reasons given the rate of deterioration in the eGFR from previous levels. \\
+It was determined during development that the second layer of RenalQ is essential; additional rules were established to ensure that a wide range of possible eGFR patterns were being handled appropriately.  One such rule was necessary for RenalQ to reliably detect acute renal failure. This rule was called the ``plummet" rule for obvious reasons given the rate of deterioration in the eGFR from previous levels. \\
 
-Before the pilot study of the RenalQ's functionality in clinical practice, considerable work was required to integrate the application into the laboratory systems. The technical complexities were in transferring data between the laboratory systems and RenalQ,  and then for the analysis results to be returned to the Laboratory systems.  The returned RenalQ results were then integrated into the standard renal function tests results for return to the clinician and retention in the patient's clinical records. \\
+Considerable work was required to integrate the RenalQ' application into the laboratory systems before the pilot study of its functionality in clinical practice.  The technical complexities were in transferring data between the laboratory systems and RenalQ,  and then for the analysis results to be returned to the Laboratory systems.  The returned RenalQ results were then integrated into the standard renal function test results for return to the clinician, and retention in the patient's clinical records. \\
 
 Once the application was operationally ready for evaluation by primary care, ethical approval for the trial to proceed was then gained from the MidCentral and Central PHO clinical boards. \\
 
