Further typo fixes

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -22,9 +22,9 @@
 
 This paper describes the development, implementation, and evaluation  of an autonomous decision support tool for the interpretation of renal function tests. The tool provides clinicians with suggestions about the further management of a patient's test results. These suggestions are designed to be patient and context specific. The motivations behind the development of this application were to improve the quality of care patients experience, and to support the General Practitioner teams to manage the volume of results they receive on a daily basis. \\
 
-An example was the discovery of an instance of an abnormal renal function result in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry indicating the result was normal. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient re-presented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\
+An example was the discovery of an instance of an abnormal renal function result in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry indicating the result was normal. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient re-presented several weeks later, still feeling unwell. Fortunately, this case ended well for the patient.\\
 
-Another patient shortly thereafter was found to have severe renal impairment associated with their type 2 diabetes. The renal function tests had been performed as part of the diabetes assessment. Each result was only 10-15\% lower than the previous. Occasionally one result showed a small rise in eGFR before the downward progression resumed. The patient was cared for by several different clinicians, but the common factor was the focus was on the diabetes and the renal disease was a side issue to the clinical focus of attention.\\
+Another patient shortly thereafter was found to have severe renal impairment associated with their type 2 diabetes. The renal function tests had been performed over several years as part of the diabetes assessment. Each result was only 10-15\% lower than the previous. Occasionally one result showed a small rise in eGFR before the downward progression resumed. The patient was cared for by several different clinicians, but the common factor was the focus was on the diabetes and the renal disease was a side issue to the clinical focus of attention.\\
 
 For any patient, this is concerning but not uncommon, especially with regards to renal function test results.  As early management can change clinical outcomes, any missed test results are of concern. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
 
